kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: 568150/vprofiledb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vpro-db-data 
        resources:
          requests:
            cpu: "500m"  # 0.5 CPU core
            memory: "512Mi"  # 512MB RAM
          limits:
            cpu: "2000m"  # Max 2 CPU cores
            memory: "2048Mi"  # Max 2GB RAM
        ports:
        - name: vprodb-port
          containerPort: 3306
        
      volumes: 
        - name: vpro-db-data
          persistentVolumeClaim: 
            claimName: db-pv-claim
