kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  labels:
    name: vpro-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.kaiserkamruzzaman.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vproapp-service
            port: 
              number: 8080
